[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-trading-env"
version = "0.3.2"
license = {file = "LICENSE.txt"}
authors = [
  { name="Clement Perroud", email="clement.perroud.pro@gmail.com" },
]
description = "A simple, easy, customizable Open IA Gym environments for trading."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "gymnasium>=0.28.1",
    "flask>=2.2.3",
    "pyecharts>=2.0.2",
    "ccxt==3.0.59",
    "nest-asyncio",
    "furo>=2023.3.27",
    "sphinxext-opengraph>=0.9.1",
    "alabaster==0.7.12",
    "babel==2.10.3",
    "certifi==2022.6.15",
    "charset-normalizer==2.1.0",
    "docutils==0.17.1",
    "idna==3.3",
    "imagesize==1.4.1",
    "jinja2==3.1.2",
    "markupsafe==2.1.1",
    "packaging==21.3",
    "pygments==2.12.0",
    "pyparsing==3.0.9",
    "pytz==2022.1",
    "requests==2.28.1",
    "snowballstemmer==2.2.0",
    "sphinx==5.0.2",
    "sphinx-rtd-theme==1.0.0",
    "sphinxcontrib-applehelp==1.0.2",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "urllib3==1.26.9",
    "sphinx-copybutton>=0.5.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[project.urls]
"Homepage" = "https://github.com/ClementPerroud/Gym-Trading-Env"
"Bug Tracker" = "https://github.com/ClementPerroud/Gym-Trading-Env/issues"
